--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "express": "^4.16.4",
     "mongoose": "^5.5.0",
-    "multer": "^1.4.1"
+    "multer": "^1.4.1",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.11"
